@@ -1,4 +1,4 @@
-@set UPDATED 27 August 2014
+@set UPDATED 31 August 2014
 @set UPDATED-MONTH August 2014
-@set EDITION 4.2-fbdb0d2890ab
-@set VERSION 4.2-fbdb0d2890ab
+@set EDITION 4.2-c9d5669c59a2
+@set VERSION 4.2-c9d5669c59a2
